term and condition, privacy policy and faqs apis complete
